--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -205,30 +205,15 @@
                     <small class="pt-1">(50 Reviews)</small>
                 </div>
                 <h3 class="font-weight-semi-bold mb-4">250 TL</h3>
-                <p class="mb-4">Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet sit clita ea. Sanc invidunt ipsum et, labore clita lorem magna lorem ut. Erat lorem duo dolor no sea nonumy. Accus labore stet, est lorem sit diam sea et justo, amet at lorem et eirmod ipsum diam et rebum kasd rebum.</p>
+                <p class="mb-4">Ürün ile ilgili bilgi için aşağı inin:</p>
                 <div class="d-flex mb-3">
-                    <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
+                    <p class="text-dark font-weight-medium mb-0 mr-3">Bendeler:</p>
                     <form>
                         <div class="custom-control custom-radio custom-control-inline">
                             <input type="radio" class="custom-control-input" id="size-1" name="size">
-                            <label class="custom-control-label" for="size-1">XS</label>
+                            <label for="size-1">38 - 46</label>
                         </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-2" name="size">
-                            <label class="custom-control-label" for="size-2">S</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-3" name="size">
-                            <label class="custom-control-label" for="size-3">M</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-4" name="size">
-                            <label class="custom-control-label" for="size-4">L</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-5" name="size">
-                            <label class="custom-control-label" for="size-5">XL</label>
-                        </div>
+                       
                     </form>
                 </div>
                 <div class="d-flex mb-4">
@@ -277,14 +262,16 @@
         <div class="row px-xl-5">
             <div class="col">
                 <div class="nav nav-tabs justify-content-center border-secondary mb-4">
-                    <a class="nav-item nav-link active" data-toggle="tab" href="#tab-pane-1">Ürün Açıklaması</a>
-                    <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-2">Ürün Bilgisi</a>
+                    <a class="nav-item nav-link active" data-toggle="tab" href="#tab-pane-1">Ürün ile ilgili açıklama:</a>
+                    <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-2">Ürün ile ilgili bilgi:</a>
                 </div>
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="tab-pane-1">
-                        <h4 class="mb-3">Product Description</h4>
-                        <p>Eos no lorem eirmod diam diam, eos elitr et gubergren diam sea. Consetetur vero aliquyam invidunt duo dolores et duo sit. Vero diam ea vero et dolore rebum, dolor rebum eirmod consetetur invidunt sed sed et, lorem duo et eos elitr, sadipscing kasd ipsum rebum diam. Dolore diam stet rebum sed tempor kasd eirmod. Takimata kasd ipsum accusam sadipscing, eos dolores sit no ut diam consetetur duo justo est, sit sanctus diam tempor aliquyam eirmod nonumy rebum dolor accusam, ipsum kasd eos consetetur at sit rebum, diam kasd invidunt tempor lorem, ipsum lorem elitr sanctus eirmod takimata dolor ea invidunt.</p>
-                        <p>Dolore magna est eirmod sanctus dolor, amet diam et eirmod et ipsum. Amet dolore tempor consetetur sed lorem dolor sit lorem tempor. Gubergren amet amet labore sadipscing clita clita diam clita. Sea amet et sed ipsum lorem elitr et, amet et labore voluptua sit rebum. Ea erat sed et diam takimata sed justo. Magna takimata justo et amet magna et.</p>
+                        <h4 class="mb-3">Ürün Hakkında:</h4>
+                        <p>-Çok amaçlı: Çoraplar genel futbol ve basketbol antrenmanı, koşu, dağcılık, yürüyüş ve diğer spor türleri için uygundur.</p>
+                        <p>-Yüksek kaliteli malzeme: Koşu çorapları, yüksek esneklik ve yüksek nefes alabilirlik ile öne çıkan sentetik liflerden (spandeks) yapılmıştır. Bu özellikler, antrenmandan sonra terin etkili bir şekilde salınmasını sağlayabilir ve ayakları kuru ve rahat tutabilir.</p>
+                        <p>-Kaymaz ve darbe sönümleme: Spor çoraplarının alt tarafına çok sayıda silikon yapışkan nokta dağıtılmıştır. Bu tasarım ayağın ayakkabıda kaymasını etkili bir şekilde önler ve titreşimleri azaltır ve antrenmanı daha konforlu hale getirir.</p>
+                        <p>-Ayaklara yakın: İyi bir sargı sağlamak için gergin ortasında elastik bir dokuma yöntemi kullanılır. Ayrıca çorapları daha güçlü hale getirmek için ayak parmakları ve topuklar dikişlerle güçlendirilir.</p>
                     </div>
                     <div class="tab-pane fade" id="tab-pane-2">
                         <h4 class="mb-3">Additional Information</h4>
