--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta charset="utf-8">
     <title>StarSuit✮</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
     <!-- Favicon -->
-    <link href="img/kisspng-star-logo-5af76bb4779ab6.8306596515261644044899.png" rel="icon">
-
+    <link href="img/kisspng-star-logo-5af76bb4779ab6.png" rel="icon">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
