--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İndirimli Ürünleri Kaçırma</h4>
                                     <h3 class="display-4 text-white font-weight-semi-bold mb-4">StarSuit Farkıyla</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Şimdi Bak</a>
+                                    <a href="shop.html" class="btn btn-light py-2 px-3">Şimdi Bak</a>
                                 </div>
                             </div>
                         </div>
@@ -133,9 +133,8 @@
                             <img class="img-fluid" src="img/model-5567579.jpg" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
-                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">Reasonable Price</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">İndirimli Ürünleri Kaçırma</h4>
+                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">StarSuit Farkıyla</h3>
                                 </div>
                             </div>
                         </div>
