--- a/shop.html
+++ b/shop.html
@@ -128,7 +128,7 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İndirimli Ürünleri Kaçırma</h4>
                                     <h3 class="display-4 text-white font-weight-semi-bold mb-4">StarSuit Farkıyla</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Şimdi Bak</a>
+                                    <a href="shop.html" class="btn btn-light py-2 px-3">Şimdi Bak</a>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,6 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İndirimli Ürünleri Kaçırma</h4>
                                     <h3 class="display-4 text-white font-weight-semi-bold mb-4">StarSuit Farkıyla</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
                                 </div>
                             </div>
                         </div>
