--- a/kaymazçorap1.html
+++ b/kaymazçorap1.html
@@ -121,7 +121,7 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İndirimli Ürünleri Kaçırma</h4>
                                     <h3 class="display-4 text-white font-weight-semi-bold mb-4">StarSuit Farkıyla</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+                                    <a href="shop.html" class="btn btn-light py-2 px-3">Shop Now</a>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,6 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İndirimli Ürünleri Kaçırma</h4>
                                     <h3 class="display-4 text-white font-weight-semi-bold mb-4">StarSuit Farkıyla</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
                                 </div>
                             </div>
                         </div>
