--- a/shop.html
+++ b/shop.html
@@ -64,15 +64,10 @@
                     </div>
                 </form>
             </div>
-            <div class="col-lg-3 col-6 text-right">
-                <a href="" class="btn border">
-                    <i class="fas fa-heart text-primary"></i>
-                    <span class="badge">12</span>
-                </a>
-                <a href="" class="btn border">
-                    <i class="fas fa-shopping-cart text-primary"></i>
-                    <span class="badge">0</span>
-                </a>
+             <div class="col-lg-3 col-6 text-right">
+                    <i class="fas fa-eye text-primary"></i>
+                    <span class="">12</span>
+                    <a>Toplam ziyaret eden kişi sayısı</a>    
             </div>
         </div>
     </div>
